page1 complete page2 error

--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -1,3 +1,9 @@
 <div class="page1">
-  <p>page1</p>
+  <div class="greetings">
+    <p>这是中山学院</p>
+    <p>网络维护科</p>
+    <p>萌萌的师弟师妹</p>
+    <p>送给即将退休的学长学姐</p>
+    <p>的一份小心意</p>
+  </div>
 </div>
