--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -1,5 +1,5 @@
 <div class="page1">
-  <div class="greetings">
+  <div class="white_text text_1 center text_center">
     <p>这是中山学院</p>
     <p>网络维护科</p>
     <p>萌萌的师弟师妹</p>
