--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <title>Title</title>
 </head>
 <body>
   ${require(`./pages/page1/page1.html`)}
 
   ${require(`./pages/page2/page2.html`)}
+
+  ${require(`./pages/page3/page3.html`)}
 </body>
 </html>
