--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -1,3 +1,11 @@
-<div class="page2">
-  <div class="js-page2-chart"></div>
+<div class="page2 blur">
+  <div>
+    <div class="white_text text_2">在总体中占比 %</div>
+    <div class="js-page2-chart"></div>
+    <div class="white_text text_2 text_center">
+      <p>众人拾柴火焰高</p>
+      <p>你们的身影</p>
+      <p>将永远被铭记</p>
+    </div>
+  </div>
 </div>
