add  "home" page3 done

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <title>Title</title>
 </head>
 <body>
+  ${require(`./pages/home/home.html`)}
+
   ${require(`./pages/page1/page1.html`)}
 
   ${require(`./pages/page2/page2.html`)}
