--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -1,12 +1,32 @@
 <div class="page3">
   <header class="text_center white_text text_3">分担了众多任务</header>
-  <div class="container">
-    <div class="text_center white_text chart_title">香晖</div>
-    <div class="js-page3-chart chart-xh"></div>
+  <div class="grid1">
+    <div>
+      <div class="text_center white_text chart_title">香晖</div>
+      <div class="js-page3-chart chart-xh"></div>
+    </div>
+    <div>
+      <div class="text_center white_text chart_title">凤翔</div>
+      <div class="js-page3-chart chart-fx"></div>
+    </div>
+    <div>
+      <div class="text_center white_text chart_title">北门</div>
+      <div class="js-page3-chart chart-ng"></div>
+    </div>
   </div>
-  <div class="container">
-    <div class="text_center white_text chart_title">凤翔</div>
-    <div class="js-page3-chart chart-fx"></div>
+  <div class="grid2">
+    <div>
+      <div class="js-page3-chart chart-eg"></div>
+      <div class="text_center white_text chart_title">东门</div>
+    </div>
+    <div>
+      <div class="js-page3-chart chart-zh"></div>
+      <div class="text_center white_text chart_title">朝晖</div>
+    </div>
+  </div>
+  <div class="white_text text_center text_3_1">
+    <p>人一能之，己百之；</p>
+    <p>人十能之，己千之；</p>
   </div>
 </div>
 
