--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,7 @@
   ${require(`./pages/page2/page2.html`)}
 
   ${require(`./pages/page3/page3.html`)}
+
+  ${require(`./pages/page4/page4.html`)}
 </body>
 </html>
