add memory series

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
 
   ${require(`./pages/page1/page1.html`)}
 
+  ${require(`./pages/memory1/memory1.html`)}
+
+  ${require(`./pages/memory2/memory2.html`)}
+
+  ${require(`./pages/memory3/memory3.html`)}
+
   ${require(`./pages/page2/page2.html`)}
 
   ${require(`./pages/page3/page3.html`)}
