--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -1,4 +1,4 @@
-<div class="page2 blur">
+<div class="page2">
   <div>
     <div class="white_text text_2">在总体中占比 %</div>
     <div class="js-page2-chart"></div>
