add dialog add player

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,9 @@
 <div class="home">
   <div class="title text_center white_text title">King of comedy</div>
-  <div class="music_box"></div>
+  <div class="player">
+    <img class="btn" src="./images/btn.png">
+    <img class="cover" src="./images/cover.png">
+  </div>
   <div class="text_left white_text text_h">
     <div>此去经年，应是良辰好景虚设</div>
     <div>别离无好酒，一曲赠于</div>
