--- a/src/pages/memory1/memory1.html
+++ b/src/pages/memory1/memory1.html
@@ -1,10 +1,7 @@
 <div class="memory1">
   <div class="dialog">
     <div>
-      <p class="dialogue">主考员：<br> “请同学们注意，本次考试时间为两小时，答完的同学就可以交卷了。”</p>
-      <p class="dialogue">.........</p>
-      <p class="dialogue">.........</p>
-      <p class="dialogue">主考员：<br> 考试结束 ！</p>
+      <p class="dialogue"></p>
     </div>
   </div>
 </div>
