--- a/src/pages/memory2/memory2.html
+++ b/src/pages/memory2/memory2.html
@@ -1,11 +1,7 @@
 <div class="memory2">
   <div class="dialog">
-    <div class="dialogue">
-      <p class="dialogue">主持人：</br> 以下是一轮通过名单</p>
-      <p class="dialogue">...</p>
-      <p class="dialogue">...</p>
-      <p class="dialogue">主人公：<br> 哇！我进去了</p>
-      <p></p>
+    <div>
+      <p class="dialogue"></p>
     </div>
   </div>
 </div>
