--- a/src/pages/page2/page2.html
+++ b/src/pages/page2/page2.html
@@ -1,6 +1,6 @@
 <div class="page2">
   <div>
-    <div class="white_text text_2">在总体中占比 %</div>
+    <div class="white_text title2">在总体中占比 %</div>
     <div class="js-page2-chart"></div>
     <div class="white_text text_2 text_center">
       <p>众人拾柴火焰高</p>
