Disable scroll, optimize animation code

--- a/src/pages/page1/page1.html
+++ b/src/pages/page1/page1.html
@@ -1,4 +1,4 @@
-<div class="page1">
+<div class="page1 Pages">
   <div class="white_text text_1 center text_center">
     <p>这是中山学院</p>
     <p>网络维护科</p>
