--- a/src/pages/page3/page3.html
+++ b/src/pages/page3/page3.html
@@ -1,4 +1,4 @@
-<div class="page3">
+<div class="page3 Pages">
   <header class="text_center white_text text_3">分担了众多任务</header>
   <div class="grid1">
     <div>
