--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -1,9 +1,4 @@
-<div class="page4">
+<div class="page4 Pages">
   <div class="white_text text_center text_4">
-    <p>世界如此广阔，</p>
-    <p>但我们相聚一堂</p>
-    </br>
-    <p>以下</p>
-    <p>是师弟师妹们的祝福及感言</p>
   </div>
 </div>
