--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -1,4 +1,43 @@
 <div class="page4 Pages">
-  <div class="white_text text_center text_4">
+  <div class="P4cover">
+    <div class="T0"></div>
+    <div class="white_text text_center text_4 T1">
+      <p>以下</p>
+      <p>是师弟师妹们的祝福及感言</p>
+    </div>
+    <div class="white_text text_center text_4 T2">
+      <p>世界如此广阔</p>
+      <p>但我们相聚一堂</p>
+    </div>
+    <div class="white_text text_center text_4 T3 text_left">
+      <p>大二了。</p>
+      <p>身为师兄师姐的你，</p>
+      <p>大一的小可爱经常出岔让你笑话了,</p>
+      <p>可是仔细想想，</p>
+      <p>还真有当初自己的影子在里面。</p>
+    </div>
+    <div class="white_text text_center text_4 T4 text_right">
+      <p>春去秋又来</p>
+      <p>一批接一批的新生</p>
+      <p>蓦然回首，恍然才发现</p>
+      <p>自己已经是学校“最老”的一批人</p>
+    </div>
+    <div class="white_text text_center text_4 T5 text_center">
+      <p>现在的你忙学习、忙实习、忙……</p>
+      <p>直到那天，</p>
+      <p>在报修处看到了熟悉的身影，</p>
+      <p>想起了过去的三年在网维的点点滴滴。</p>
+    </div>
+    <div class="white_text text_center text_4 T6 text_center">
+      <p>嘿，起风了。</p>
+      <p>不知道是不是因为</p>
+      <p>上年入冬困难的缘故，</p>
+      <p>今年的冷空气表现得急不难耐。</p>
+    </div>
+    <div class="white_text text_center text_4 T7 text_center">
+      <p>我们</p>
+      <p>好想你，</p>
+      <p>想那个前程似锦的你。</p>
+    </div>
   </div>
 </div>
