add bgm but error

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <title>Title</title>
+  <audio controls src="./1.mp3"></audio>
+  <audio controls src="./assets/Music/2.mp3"></audio>
+  <title>致大四</title>
 </head>
 <body>
   ${require(`./pages/home/home.html`)}
