--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
-  <audio controls src="./1.mp3"></audio>
-  <audio controls src="./assets/Music/2.mp3"></audio>
   <title>致大四</title>
 </head>
 <body>
+  <audio controls src="../static/media/2.mp3"></audio>
+
   ${require(`./pages/home/home.html`)}
 
   ${require(`./pages/page1/page1.html`)}
