--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>致大四</title>
 </head>
 <body>
-  <audio controls src="../static/media/2.mp3"></audio>
+  <audio loop preload="auto" class="bgm" src="../static/media/bgm.mp3"></audio>
 
   ${require(`./pages/home/home.html`)}
 
