BGM changed：澤野弘之-itsuka ; resized background ;  Adjust the animation time in page4

--- a/src/pages/page4/page4.html
+++ b/src/pages/page4/page4.html
@@ -39,5 +39,8 @@
       <p>好想你，</p>
       <p>想那个前程似锦的你。</p>
     </div>
+    <div class="white_text text_center text_4 T8 text_center">
+      <p>感谢观看</p>
+    </div>
   </div>
 </div>
